# pyaegean

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: config.yml  correction.yml  data_contribution.yml  maintainer_task.yml  reproduction_discrepancy.yml  validation.yml
.github/workflows/: assets.yml  ci.yml  docs.yml  release.yml  wiki.yml
docs/: PLAN.md  ROADMAP.md  benchmarks.md  index.md  interoperability.md  large-corpora.md  methodology.md  pleiades-candidates.md  review.md
docs/api/: aegean.md  ai.md  analysis.md  cache.md  core.md  data.md  db.md  geo.md  greek.md  index.md  io.md  mcp.md  scripts-cypriot.md  scripts-cyprominoan.md  scripts-greek.md  scripts-lineara.md  scripts-linearb.md  scripts.md  translate.md  viz.md
docs/demo/: demo.py  index.html
docs/inquiries/: README.md  damos.md  liber.md
experiments/neural_lemma_spike/: .gitignore  README.md  build_export_notebook.py  build_multi_treebank_data.py  build_production_data.py  build_seq2seq_data.py  build_spike_notebook.py  eval_seq2seq.py  eval_spike.py  export_production_model.ipynb  prep_spike_data.py  quantize_bundle.py  spike_lemma_grebert.ipynb
notebooks/: getting-started.ipynb  walkthrough-aegean.ipynb  walkthrough-epigraphist.ipynb  walkthrough-nt-koine.ipynb
review/: DATA_CARD.md  MODEL_CARD.md  README.md  expected-results-v1.json  review-manifest-v1.json
scripts/: _epidoc.py  api-baseline.json  api-manifest.json  build_autenrieth_index.py  build_cypriot_data.py  build_cypriot_ig.py  build_cyprominoan_data.py  build_damos_corpus.py  build_dbbe_fold.py  build_ddbdp_corpus.py  build_ddbdp_uri_map.py  build_dodson_lexicon.py  build_edh_corpus.py  build_greek_catalogue.py  build_igcyr_corpus.py  build_iip_corpus.py  build_iospe_corpus.py  build_isicily_corpus.py  build_linearb_data.py  build_linearb_lexicon.py  build_linearb_samples.py  build_nt_corpus.py  build_papygreek_dev.py  build_papygreek_fold.py  build_paradigm_table.py  build_sigla_corpus.py  build_verse_fold.py  check_api.py  check_assets.py  check_benchmarks.py  check_checkpoint.py  check_corpus_facts.py  check_footprint.py  check_gazetteer.py  check_papygreek_fold_correction.py  explore_sigla_db.py  gazetteer_pins.json  reproduce_review.py  surface-manifest.json
src/aegean/: __init__.py  _atomic.py  _doctor.py  _locking.py  _log.py  _view.py  cache.py  db.py  mcp_server.py  viz.py
tests/: conftest.py  test_a13_export_contract.py  test_a13_neural_preprocessing.py  test_a14_cli.py  test_a14_streaming.py  test_a15_interop_bundle.py  test_a15_interop_cltk.py  test_a15_interop_core.py  test_a15_interop_dependency_contract.py  test_a15_interop_spacy.py  test_a15_interop_stanza.py  test_a16_annotation_profiles.py  test_a16_annotation_profiles_cli.py  test_a16_profile_receipts.py  test_a3_window_propagation.py  test_a4_core_alignment.py  test_a4_db_alignment.py  test_a4_pipeline_alignment.py  test_a4_surface_alignment.py  test_a5_conllu_lossless.py  test_a6_epidoc_conllu.py  test_a6_persistence_compat.py  test_a6_pipeline_forms.py  test_a6_surfaces.py  test_a7_sentence_segmentation.py  test_abbott_smith.py  test_accent_law.py  test_accounting.py  test_agdt.py  test_ai.py  test_ai_adapters.py  test_ai_eval.py  test_algorithms.py  test_algorithms_properties.py  test_allographs.py  test_apparatus_summary.py  test_assets.py  test_autenrieth.py  test_b9_parser_features.py  test_benchmark_claims.py  (+255 more)
training/: README.md  a17-dry-run-config.json  a17-requirements.txt  a17_colab.py  agdt_ud.py  agdt_ud_deps.py  artifact-qualification-gate-v1.json  artifact-qualification-gate-v2.json  artifact-qualification-gate-v3.json  artifact_command.py  artifact_qualification.py  artifact_runtime.py  bakeoff_upos.py  build_full_dataset.py  build_parser_dataset.py  build_tagger_dataset.py  build_upos_dataset.py  calibrate_temperature.py  canonicalization-policy-v1.json  canonicalization-policy-v2.json  canonicalization-policy-v3.json  canonicalization-policy-v4.json  development-source-pins.json  development_manifest.py  development_report.py  environment-lock.json  eval_full_ud.py  eval_parser_ud.py  eval_rawtext_ud.py  eval_tagger_ud.py  export_onnx.py  extra_treebanks.py  model-selection-gate-v1.json  model-selection-gate-v2.json  model-selection-gate-v3.json  model_selection.py  quantize_grc_joint.py  reproducibility.py  retrain_experiment.ipynb  run_development_evaluation.py  (+13 more)
training/contracts/: artifact-qualification-gate.schema.json  backbone-resolution.schema.json  environment-lock.schema.json  evidence-summary.schema.json  model-selection-gate.schema.json  preflight.schema.json  resolver-manifest.schema.json  run-receipt-v2.schema.json  run-receipt.schema.json  runtime-variant-award.schema.json  runtime-variant-policy.schema.json
training/fixtures/: a17-dry-run.jsonl
training/results/: calibration-2026-07-11.json  corpus-facts.json  dbbe-eval-2026-07-11.json  dbbe-eval-v2-2026-07-11.json  dbbe-lingann-fold-manifest.json  decoder-v2-papygreek-remeasure-2026-07-18.json  decoder-v2-remeasure-2026-07-18.json  development-source-manifest.json  documentary-levers-2026-07-11.json  documentary-levers-v2-2026-07-11.json  documentary-levers-v3-2026-07-15.json  gate-report.json  gpu-verify-2026-07-10.json  papygreek-dev-manifest.json  (+23 more)
wiki/: AI-Layer.md  Analysis.md  Architecture.md  Benchmarks.md  CLI-Cheatsheet.md  CLI.md  Choosing-a-Pipeline.md  Choosing-a-Workflow.md  Citing-Computational-Assistance.md  Cypriot.md  Cypro-Minoan.md  Data-Model.md  Data-and-Provenance.md  Development.md  Evaluation.md  FAQ.md  For-Specialists.md  Geography.md  Getting-Started.md  Glossary.md  Greek-NLP.md  Greek-Works-and-Books.md  Home.md  Independent-Review.md  Installation.md  Interoperability.md  Limitations.md  Linear-A.md  Linear-B.md  MCP.md  Meters.md  Methodology.md  New-Testament.md  Reading-a-Parse.md  Recipes.md  TUI.md  Translation.md  Tutorial.md  Using-Critical-Editions.md  Validation-and-Review.md  (+2 more)
(+307 files in other folders)
