[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaegean"
version = "0.8.0"
description = "A specialist Python toolkit for Ancient Greek — alphabetic Greek and the Aegean syllabic scripts (Linear A/B)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ryan Pavlicek" }]
keywords = [
  "ancient greek", "linear a", "linear b", "mycenaean", "aegean",
  "epigraphy", "philology", "corpus", "bronze age", "syllabary",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
# Core has ZERO hard third-party dependencies: `import aegean` is instant and pulls
# nothing heavy. pandas (DataFrame interop) is the optional [data] extra; collocation
# statistics are pure stdlib. Corpora and trained models fetch to cache, never bundled.
dependencies = []

[project.optional-dependencies]
data = ["pandas>=2.0"]             # DataFrame interop (to_dataframe); the core is pandas-free
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.30"]
gemini = ["google-genai>=0.3"]
grok = ["openai>=1.30"]            # xAI Grok is OpenAI-API-compatible
ai = ["anthropic>=0.39", "openai>=1.30", "google-genai>=0.3"]
epidoc = ["lxml>=5.0"]
parquet = ["pyarrow>=14"]
geo = ["geopandas>=0.14", "shapely>=2.0"]
neural = ["onnxruntime>=1.17", "tokenizers>=0.15", "numpy>=1.24"]  # neural pipeline + GreTa lemmatizer (torch-free); models fetched to cache
cli = ["typer>=0.12", "rich>=13"]  # the `aegean` command-line interface
dev = ["pytest>=8", "pytest-cov", "hypothesis", "mypy", "ruff", "build", "twine", "nbmake", "ipykernel", "pandas>=2.0", "typer>=0.12", "rich>=13"]
docs = ["pdoc>=14"]                # builds the API reference (pdoc → GitHub Pages); build-time only
all = ["pyaegean[ai,epidoc,geo,data,cli]"]

[project.scripts]
aegean = "aegean.cli:main"

[project.urls]
Homepage = "https://github.com/ryanpavlicek/pyaegean"
Source = "https://github.com/ryanpavlicek/pyaegean"
Documentation = "https://github.com/ryanpavlicek/pyaegean/wiki"
"API Reference" = "https://ryanpavlicek.github.io/pyaegean/"
Issues = "https://github.com/ryanpavlicek/pyaegean/issues"
Changelog = "https://github.com/ryanpavlicek/pyaegean/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegean = ["py.typed", "data/bundled/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/aegean"]
warn_unused_ignores = false   # pandas/numpy are lazy-imported; ignores vary by env

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "anthropic.*", "openai.*", "google.*", "onnxruntime.*", "tokenizers.*", "lxml.*", "geopandas.*", "shapely.*"]
ignore_missing_imports = true
