[build-system]
requires = ["setuptools>=77"]   # >=77 for PEP 639 SPDX license expression + Metadata 2.4
build-backend = "setuptools.build_meta"

[project]
name = "pyaegean"
version = "0.29.0"
description = "A specialist Python toolkit for Ancient Greek — alphabetic Greek NLP (incl. a state-of-the-art neural pipeline) and the Aegean syllabic scripts (Linear A, Linear B, Cypriot, Cypro-Minoan)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Ryan Pavlicek" }]
keywords = [
  "ancient greek", "linear a", "linear b", "cypriot", "cypro-minoan", "mycenaean",
  "aegean", "epigraphy", "philology", "corpus", "bronze age", "syllabary",
  "nlp", "lemmatization", "dependency parsing", "scansion",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
# License is declared as the PEP 639 SPDX expression `license = "Apache-2.0"` above;
# the deprecated "License ::" classifier is intentionally omitted (setuptools>=77 rejects both).
# Core has ZERO hard third-party dependencies: `import aegean` is instant and pulls
# nothing heavy. pandas (DataFrame interop) is the optional [data] extra; collocation
# statistics are pure stdlib. Corpora and trained models fetch to cache, never bundled.
dependencies = []

# Every floor below is a VERIFIED floor: the exact pinned version installs on a supported
# Python alongside what pip resolves for its own dependencies today, and the feature works.
# When raising or adding one, verify the pin the same way (throwaway venv, floor-pinned,
# feature smoke) — a floor nobody has run is a claim, not a constraint.
[project.optional-dependencies]
data = ["pandas>=2.2.2"]           # DataFrame interop (to_dataframe); >=2.2.2: first numpy-2-compatible
anthropic = ["anthropic>=0.40"]    # >=0.40: first compatible with httpx>=0.28 (proxies kwarg removal)
openai = ["openai>=1.55.3"]        # >=1.55.3: first compatible with httpx>=0.28
gemini = ["google-genai>=0.3"]
grok = ["openai>=1.55.3"]          # xAI Grok is OpenAI-API-compatible
openrouter = ["openai>=1.55.3"]    # OpenRouter is an OpenAI-API-compatible gateway
ai = ["anthropic>=0.40", "openai>=1.55.3", "google-genai>=0.3"]
epidoc = ["lxml>=5.0"]
parquet = ["pyarrow>=16.1"]        # >=16.1: first numpy-2-compatible
geo = ["geopandas>=0.14", "shapely>=2.0.4"]  # shapely >=2.0.4: first with numpy-2-safe wheels/metadata
viz = ["matplotlib>=3.8"]          # one-line plots (aegean.viz / `aegean plot`); the core is matplotlib-free
neural = ["onnxruntime>=1.23", "tokenizers>=0.20", "numpy>=1.24"]  # neural pipeline + GreTa lemmatizer (torch-free); models fetched to cache (onnxruntime>=1.23: the quantized joint model's int8 weight-only kernel; tokenizers>=0.20: loads the shipped tokenizer.json format)
cli = ["typer>=0.16", "rich>=13", "prompt_toolkit>=3.0"]  # the `aegean` command-line interface (+ `aegean repl`); typer>=0.16: first compatible with click>=8.2
mcp = ["mcp>=1.2"]                 # the `aegean-mcp` Model Context Protocol server; >=1.2: mcp.server.fastmcp
tui = ["textual>=8.0", "typer>=0.16", "rich>=13", "prompt_toolkit>=3.0"]  # the `aegean tui` terminal UI (Textual); `aegean tui` is a CLI subcommand, so the CLI deps ride along
dev = ["pytest>=8", "pytest-cov", "hypothesis", "mypy", "ruff", "build", "twine", "nbmake", "ipykernel", "pandas>=2.2.2", "typer>=0.16", "rich>=13", "prompt_toolkit>=3.0", "lxml>=5.0", "matplotlib>=3.8", "mcp>=1.2", "textual>=8.0"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]  # API reference (mkdocs → GitHub Pages); build-time only
all = ["pyaegean[ai,epidoc,geo,data,cli,viz,mcp,tui]"]

[project.scripts]
aegean = "aegean.cli:main"
aegean-mcp = "aegean.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ryanpavlicek/pyaegean"
Source = "https://github.com/ryanpavlicek/pyaegean"
Documentation = "https://github.com/ryanpavlicek/pyaegean/wiki"
"API Reference" = "https://ryanpavlicek.github.io/pyaegean/"
Issues = "https://github.com/ryanpavlicek/pyaegean/issues"
Changelog = "https://github.com/ryanpavlicek/pyaegean/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegean = ["py.typed", "data/bundled/**/*.json", "tui/**/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/aegean"]
warn_unused_ignores = false   # pandas/numpy are lazy-imported; ignores vary by env

[[tool.mypy.overrides]]
module = ["pandas.*", "anthropic.*", "openai.*", "google.*", "onnxruntime.*", "tokenizers.*", "lxml.*", "geopandas.*", "shapely.*", "matplotlib.*", "mcp.*", "textual.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy 2.5+ ships PEP 695 `type` statements in its .pyi stubs (Python 3.12+ syntax);
# with python_version = "3.10" mypy errors out parsing them. We don't type-check numpy
# internals, so skip following into the package rather than pinning its version.
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
